Fix p.author alignment to the right

--- a/style.css
+++ b/style.css
@@ -119,11 +119,21 @@ p.top, header a {
     padding: 16px 32px;
 }
 
+.quote {
+    display: flex;
+    flex-direction: column;
+    max-width: 600px;
+}
+
 p.quote {
     font-size: 36px;
     font-style: italic;
     color: #1F2937;
-    max-width: 600px;
+}
+
+p.author {
+    font-weight: 900;
+    align-self: flex-end;
 }
 
 button, .calltoaction {
